--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+#  fluttertoast: ^8.0.7
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,16 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/logo.jpg
+   - images/cat1.jpg
+   - images/cat2.jpg
+   - images/cat3.jpg
+   - images/cat4.jpg
+   - images/cat5.jpg
+   - images/dog1.jpg
+   - images/dog2.jpg
+   - images/dog3.jpg
+   - images/dog4.jpg
+   - images/dog5.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
