--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/logo.jpg
+   - images/profile.jpg
    - images/cat1.jpg
    - images/cat2.jpg
    - images/cat3.jpg
